--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>  
    <head> 
-     <h1> Programas de Enivaldo Bonelli </h1>
+     <center><h3> Programas de Enivaldo Bonelli </h3></center>
 
    </head>
 
