--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>  
    <head> 
      <center><h3> Programas de Enivaldo Bonelli </h3></center>
+     <center><h2> Programas de Enivaldo Bonelli </h2></center>
 
    </head>
 
