--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<html>  
+<!DOCTYPE html>
+<html lang="pt-BR">
+ <meta charset="UTF-8"> 
    <head> 
-     <center><h3> Programas de Enivaldo Bonelli </h3></center>
      <center><h2> Programas de Enivaldo Bonelli </h2></center>
-
+     <center><h3> Classificados por categoria</h3></center>
+      <center>Atualizado em 5/10/2023</center>
+       <center>________________________________________</center>
    </head>
+   <body> 
+      
+       <p> <a href="./sismos/">Sismos no mundo nas últimas 24 horas</a>
+       <p><a href="./mars-track">Animação: planetas, Sol, Estrelas, Cometas, Lua</a>
+       <p> Até dia 14, mostrará simulação do eclipse solar.
+       <p><a href="./polydioms">Pratique sua fala em vários idiomas</a>
+       <p><a href="./solarSystem">Sistema solar - animação</a>
+       <p>  Use botão e rodinha do mouse.  Tamanhos exagerados.
+       <p><a href="./stars">Estrelas</a>
+       <p><a href="url">link text</a>
+       <p><a href="url">link text</a>
+       <p><a href="url">link text</a>
+       <p><a href="url">link text</a>
 
+   
+   
+   
+   
+   </body>
 
 
 
