--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <p><a href="../polydioms">Pratique sua fala em vários idiomas</a>
        <p><a href="../solarSystem">Sistema solar - animação</a>
        <p>  Use botão e rodinha do mouse.  Tamanhos exagerados.
-       <p><a href="../stars">Estrelas</a>
+       <p><a href="../StarDatabase">Estrelas</a>
        <p><a href="url">link text</a>
        <p><a href="url">link text</a>
        <p><a href="url">link text</a>
