--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <p><a href="../solarSystem">Sistema solar - animação</a>
        <p>  Use botão e rodinha do mouse.  Tamanhos exagerados.
        <p><a href="../StarDatabase">Estrelas</a>
-       <p><a href="../localizacao">link text</a>
+       <p><a href="../localizacao">Sua localizacao na superficie da Terra (redonda.)</a>
        <p><a href="url">link text</a>
        <p><a href="url">link text</a>
        <p><a href="url">link text</a>
