--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <body> 
       
        <p> <a href="../sismos/">Sismos no mundo nas últimas 24 horas</a>
-       <p><a href="../mars-track">Animação: planetas, Sol, Estrelas, Cometas, Lua</a>
+       <p><a href="../solarsys/">Animação: planetas, Sol, Estrelas, Cometas, Lua</a>
        <p> Até dia 14, mostrará simulação do eclipse solar.
        <p><a href="../polydioms">Pratique sua fala em vários idiomas</a>
        <p><a href="../solarSystem">Sistema solar - animação</a>
