--- a/index.html
+++ b/index.html
@@ -2,30 +2,19 @@
 <html lang="pt-BR">
  <meta charset="UTF-8"> 
    <head> 
-     <center><h2> Programas de Enivaldo Bonelli </h2></center>
-     <center><h3> Classificados por categoria</h3></center>
-      <center>Atualizado em 5/10/2023</center>
-       <center>________________________________________</center>
+   <h2> Programas de Enivaldo Bonelli </h2>
+      <p>Atualizado em 5/10/2023
    </head>
    <body> 
       
        <p> <a href="../sismos/">Sismos no mundo nas últimas 24 horas</a>
        <p><a href="../solarsys/">Animação: planetas, Sol, Estrelas, Cometas, Lua</a>
-       <p> Até dia 14, mostrará simulação do eclipse solar.
        <p><a href="../polydioms">Pratique sua fala em vários idiomas</a>
-       <p><a href="../solarSystem">Sistema solar - animação</a>
-       <p>  Use botão e rodinha do mouse.  Tamanhos exagerados.
+       <p><a href="../solarSystem">Sistema solar - animação</a
        <p><a href="../StarDatabase">Estrelas</a>
        <p><a href="../localizacao">Sua localizacao na superficie da Terra (redonda.)</a>
-       <p><a href="url">link text</a>
-       <p><a href="url">link text</a>
-       <p><a href="url">link text</a>
-
-   
-   
-   
-   
-   </body>
+      
+    </body>
 
 
 
