--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <p> <a href="../sismos/">Sismos no mundo nas últimas 24 horas</a>
        <p><a href="../solarsys/">Animação: planetas, Sol, Estrelas, Cometas, Lua</a>
        <p><a href="../polydioms">Pratique sua fala em vários idiomas</a>
-       <p><a href="../solarSystem">Sistema solar - animação</a
+       <p><a href="../solarSystem">Sistema solar - animação</a>
        <p><a href="../StarDatabase">Estrelas</a>
        <p><a href="../localizacao">Sua localizacao na superficie da Terra (redonda.)</a>
       
