--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <p><a href="../polydioms">Pratique sua fala em vários idiomas</a>
        <p><a href="../solarSystem">Sistema solar - animação</a>
        <p><a href="../StarDatabase">Estrelas</a>
-       <p><a href="../localizacao">Sua localizacao na superficie da Terra (redonda.)</a>
+       <p><a href="../clima">Sua localizacao e clima</a>
       
     </body>
 
